<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- View Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_overview" />

        <!-- Input fields -->

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_product_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords" />

        <!-- Price field -->
        <EditText
            android:id="@+id/edit_product_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_price"
            android:inputType="textCapWords" />

        <!-- Quantity field -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/increase_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="changeProductQuantity"
                android:text="@string/increase_quantity_button_label" />

            <TextView
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:gravity="center"
                android:hint="@string/hint_product_quantity"
                android:inputType="textCapWords" />

            <Button
                android:id="@+id/decrease_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="changeProductQuantity"
                android:text="@string/decrease_quantity_button_label" />
        </LinearLayout>

        <!-- Supplier Name field -->
        <EditText
            android:id="@+id/edit_product_supplier_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_supplier_name"
            android:inputType="textCapWords" />

        <!-- Supplier Phone Number field -->
        <EditText
            android:id="@+id/edit_product_supplier_phone_number"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_supplier_phone_number"
            android:inputType="textCapWords" />
    </LinearLayout>

    <Button
        android:id="@+id/call_product_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="callProductSupplier"
        android:text="@string/call_product_supplier" />
</LinearLayout>
